[gd_scene load_steps=2 format=3 uid="uid://dmr7eppaohdcq"]

[ext_resource type="Script" uid="uid://dpyh4hegkaxbg" path="res://scripts/host_controls.gd" id="1_hdx82"]

[node name="HostControls" type="CanvasLayer"]
script = ExtResource("1_hdx82")

[node name="Container" type="ColorRect" parent="."]
offset_left = 803.0
offset_top = 14.0
offset_right = 1139.0
offset_bottom = 101.0
color = Color(0, 0, 0, 0.18431373)

[node name="LoadDir" type="Button" parent="Container"]
layout_mode = 0
offset_left = 282.0
offset_top = 6.0
offset_right = 328.0
offset_bottom = 37.0
text = "Load"

[node name="Directory" type="LineEdit" parent="Container"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 272.0
offset_bottom = 37.0
placeholder_text = "Game directory"

[node name="Index" type="LineEdit" parent="Container"]
layout_mode = 0
offset_left = 7.0
offset_top = 45.0
offset_right = 119.0
offset_bottom = 76.0
placeholder_text = "Map Number"

[node name="LoadIndex" type="Button" parent="Container"]
layout_mode = 0
offset_left = 131.0
offset_top = 45.0
offset_right = 177.0
offset_bottom = 76.0
text = "Load"

[node name="Prev" type="Button" parent="Container"]
layout_mode = 0
offset_left = 187.0
offset_top = 44.0
offset_right = 205.0
offset_bottom = 75.0
text = "<"

[node name="Next" type="Button" parent="Container"]
layout_mode = 0
offset_left = 210.0
offset_top = 44.0
offset_right = 228.0
offset_bottom = 75.0
text = ">"

[connection signal="pressed" from="Container/LoadDir" to="." method="_on_load_dir_pressed"]
[connection signal="pressed" from="Container/LoadIndex" to="." method="_on_load_index_pressed"]
[connection signal="pressed" from="Container/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Container/Next" to="." method="_on_next_pressed"]
